<resources>
    <string name="app_name">SP20_BSE_021_Assi_2</string>
    <string name="txt_code">0000</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_back">Back</string>
    <string name="btn_open">Open</string>
    <string name="welcome_txt">Welcome to your safe</string>
    <string name="_0000">0000</string>
    <string name="_3">3</string>
    <string name="_1234">1234</string>
</resources>