<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_code"
        android:layout_width="339dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical"
        android:hint="@string/txt_code"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/num_5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_5"
        app:layout_constraintStart_toEndOf="@+id/num_4"
        app:layout_constraintTop_toBottomOf="@+id/num_2" />

    <Button
        android:id="@+id/num_2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_2"
        app:layout_constraintStart_toEndOf="@+id/num_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_code" />

    <Button
        android:id="@+id/num_3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_3"
        app:layout_constraintStart_toEndOf="@+id/num_2"
        app:layout_constraintTop_toBottomOf="@+id/txt_code"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/num_4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_1" />

    <Button
        android:id="@+id/num_6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_6"
        app:layout_constraintStart_toEndOf="@+id/num_5"
        app:layout_constraintTop_toBottomOf="@+id/num_3" />

    <Button
        android:id="@+id/num_7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_4" />

    <Button
        android:id="@+id/num_8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_8"
        app:layout_constraintStart_toEndOf="@+id/num_7"
        app:layout_constraintTop_toBottomOf="@+id/num_5" />

    <Button
        android:id="@+id/num_9" android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_9"
        app:layout_constraintStart_toEndOf="@+id/num_8"
        app:layout_constraintTop_toBottomOf="@+id/num_6" />

    <Button
        android:id="@+id/num_0"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_7" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_back"
        app:layout_constraintStart_toEndOf="@+id/num_0"
        app:layout_constraintTop_toBottomOf="@+id/num_8" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_open"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/num_9" />

    <Button
        android:id="@+id/num_1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:fadeScrollbars="false"
        android:text="@string/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_code" />

</androidx.constraintlayout.widget.ConstraintLayout>